# basis_trading

./: .gitignore  BTCUSDT_240628.json  BTCUSD_240628.json  README.md  bot.py  exchange.json  pyproject.toml  rnd.ipynb  utils.py
basis_trading/: utils.py
exchanges/: ace.json  ascendex.json  bequant.json  bigone.json  binancecoinm.json  binanceusdm.json  bingx.json  bit2c.json  bitbank.json  bitbay.json  bitbns.json  bitfinex.json  bitfinex2.json  bitflyer.json  bitget.json  bithumb.json  bitmex.json  bitopro.json  bitso.json  bitstamp.json  bitteam.json  bitvavo.json  bl3p.json  blockchaincom.json  blofin.json  btcalpha.json  btcbox.json  btcmarkets.json  btcturk.json  cex.json  coinbaseinternational.json  coinbasepro.json  coincheck.json  coinex.json  coinlist.json  coinmate.json  coinmetro.json  coinone.json  coinsph.json  coinspot.json  (+39 more)
infos/: binance_ADAUSD_240628.json  binance_ADAUSD_240927.json  binance_ADAUSD_241227.json  binance_BCHUSD_240628.json  binance_BCHUSD_240927.json  binance_BCHUSD_241227.json  binance_BNBUSD_240628.json  binance_BNBUSD_240927.json  binance_BNBUSD_241227.json  binance_BTCUSD_240628.json  binance_BTCUSD_240927.json  binance_BTCUSD_241227.json  binance_DOTUSD_240628.json  binance_DOTUSD_240927.json  binance_DOTUSD_241227.json  binance_ETHUSD_240628.json  binance_ETHUSD_240927.json  binance_ETHUSD_241227.json  binance_LINKUSD_240628.json  binance_LINKUSD_240927.json  binance_LINKUSD_241227.json  binance_LTCUSD_240628.json  binance_LTCUSD_240927.json  binance_LTCUSD_241227.json  binance_XRPUSD_240628.json  binance_XRPUSD_240927.json  (+235 more)
