[tool.poetry]
name = "basis-trading"
version = "0.1.0"
description = ""
authors = ["Alekei Grachev <aleksei.grachev@alberblanc.com>"]
readme = "README.md"
packages = [{include = "basis_trading"}]

[tool.poetry.dependencies]
python = "^3.10"
ccxt = "^4.2.86"
jupyter = "^1.0.0"
pandas = "2.1"
plotly = "^5.22.0"
loguru = "^0.7.2"
attrs = "^23.2.0"
requests = "^2.32.3"
click = "^8.1.7"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
